@@ -1,4 +1,5 @@
 2010-12-14
+ * maxRepeat constraint
  * added comments to indicate failed Auger cuts
 
 2010-12-11
